syntax = "proto3";

option csharp_namespace = "Port.Server.Messages";

service PortForwarder {
	rpc PortForward (stream ForwardRequest) returns (stream ForwardResponse);
}

message ForwardRequest {
	string context = 1;

	oneof command {
		Forward forward = 2;
		Stop stop = 3;
	}
}

message Forward {
	string namespace = 1;
	string pod = 2;
	uint32 pod_port = 3;
	uint32 local_port = 4;
	enum ProtocolType {
		TCP = 0;
		UDP = 1;
	}
	ProtocolType protocol_type = 5;
}

message Stop {
}

message ForwardResponse {
	oneof event {
		Forwarded forwarded = 1;
		Stopped stopped = 2;
	}
}

message Forwarded {
}

message Stopped {
	bool retrying = 4;
	uint32 retries = 5;
}
